# campus-lane-folower

./: .gitignore  README.md  remote_control_gui.py
src/car_simulation/: package.xml  setup.py
src/car_simulation/car_simulation/: car_simulation_node.py  color_detector_node.py  waypoint_publisher_node.py
src/car_simulation/launch/: car_simulation.launch.py
src/farm_sim/: package.xml  setup.cfg  setup.py
src/lane_detection/: package.xml  setup.py
src/lane_simulation/: CMakeLists.txt  package.xml
src/lane_simulation/launch/: gazebo.launch.py  simulation_with_lane_detection.launch.py  spawn_robot.launch.py  synthetic_sim.launch.py
src/lane_simulation/models/1771728719331/: model.sdf
src/lane_simulation/models/1771728719331/textures/: make_road.py  make_road_2.py  make_road_3.py  make_road_4.py
src/lane_simulation/models/college_buildings/: model.config  model.sdf
src/lane_simulation/models/college_road_network/: model.config  model.sdf
src/lane_simulation/models/college_road_network/materials/scripts/: road.material
src/lane_simulation/models/college_satellite/: model.config  model.sdf
src/lane_simulation/models/college_satellite/materials/scripts/: satellite.material
src/lane_simulation/models/osm_buildings/: model.config  model.sdf
src/lane_simulation/urdf/: ebot.gazebo  ebot.xacro
src/lane_simulation/world/: college_road.world  course.world  only_roads.world  osm_aligned.world  osm_pure.world  synthetic_road.world  test_track.world
tools/: analyze_fixed.py  analyze_lane.py  capture_camera.py  osm_to_gazebo_buildings.py  parse_osm_road.py
(+11 files in other folders)
